S3: platform hygiene for Java 21.
Pin javac release=21, delete dead EscapeApplet (ant run never used it;
Applet is marked for removal), and replace deprecated
Class.newInstance() with getDeclaredConstructor().newInstance() in
Level.byName. Behaviour locked by S2 reflection test. 23/23 green.

Co-authored-by: chriswalker-cursor-build <chriswalker-cursor-build@users.noreply.github.com>